[gd_scene load_steps=5 format=3 uid="uid://boo01bjh5r46f"]

[ext_resource type="Script" path="res://Menu/Main Menu.gd" id="1_8wxqu"]
[ext_resource type="FontFile" uid="uid://b82ttfeiyi7uk" path="res://Menu/fonts/TechnicznaPomoc.ttf" id="2_6yq1n"]
[ext_resource type="Texture2D" uid="uid://rbgenrax0a7t" path="res://Menu/Images/Main_menu.png" id="2_k3who"]
[ext_resource type="FontFile" uid="uid://d4gatddpys0uf" path="res://Menu/fonts/Fortyfive.ttf" id="3_tbp3v"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8wxqu")
Moving_Background = true
Background_Speed = 0.055
Brackground_Force = 0.205
Targeted_Scene = "res://Michael_test_scene.tscn"

[node name="Background_Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu_Background" type="TextureRect" parent="Background_Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2592.0
offset_top = -1364.0
offset_right = 1389.0
offset_bottom = 1273.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k3who")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -268.0
offset_right = 229.0
offset_bottom = -205.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_tbp3v")
theme_override_font_sizes/font_size = 60
text = "Geometry Craft I"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -132.0
offset_right = 200.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -116.0
offset_right = 153.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_6yq1n")
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="ReferenceRect" type="ReferenceRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
border_color = Color(0, 0, 0, 1)
border_width = 0.0

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_6yq1n")
theme_override_font_sizes/font_size = 40
text = "Quit
"

[connection signal="item_rect_changed" from="." to="." method="_on_item_rect_changed"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
